--- a/REVIEW 3/IVAN/signup.html
+++ b/REVIEW 3/IVAN/signup.html
@@ -33,7 +33,7 @@
         }
 
         input {
-            width: 100%;
+            width: -webkit-fill-available;
             padding: 15px;
             border-radius: 10px;
             border: 1px solid #ccc;
